<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Balloon Landing</string>    
    <string name="burnerButton">Fire ^</string>
    <string name="windButton">Wind ></string>
    <string name="xmlError">XML error</string>
    <string name="world1">World 1</string>
    <string name="world2">World 2</string>
    <string name="world3">World 3</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="newGame">New Game</string>
    <string name="customLevel">Custom Levels</string>
    <string name="availableLevels">Available Levels:</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="download">Download</string>
    <string name="balloonSize">Balloon Size:</string>
    <string name="trainSize">Train Size:</string>
    <string name="windStrength">Wind Strength:</string>
    <string name="levelName">Level Name:</string>
    <string name="windResistance">Wind Resistance:</string>
    <string name="gravity">Gravity:</string>
    <string name="burnerStrength">Burner Strength:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="test">Test</string>
    <string name="level">Level</string>
    <string name="introText">Land the balloon on the train. Use the burner to go up and wind to go right.</string>
    <string name="letsGo">Let\'s Go!</string>
    <string name="crash">Crash!</string>
    <string name="failed">Oh no! You crashed!</string>
    <string name="ok">OK</string>
    <string name="success">Success!</string>
    <string name="wellDone">Well done! You landed safely, on to the next level!</string>
</resources>
