<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    <Button android:id="@+id/button4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toLeftOf="@+id/button5" android:layout_marginRight="30dp" android:onClick="launchLevel1" android:enabled="false" android:text="@string/level1"></Button>    
    <Button android:id="@+id/button5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toLeftOf="@+id/button6" android:layout_marginRight="30dp" android:onClick="launchLevel2" android:enabled="false" android:text="@string/level2"></Button>
    <Button android:id="@+id/button6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:enabled="false" android:onClick="launchLevel3" android:text="@string/level3"></Button>
    <Button android:id="@+id/button7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/button6" android:layout_marginLeft="30dp" android:onClick="launchLevel4" android:enabled="false" android:text="@string/level4"></Button>
    <Button android:id="@+id/button8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/button7" android:layout_marginLeft="30dp" android:onClick="launchLevel5" android:enabled="false" android:text="@string/level5"></Button>    
</RelativeLayout>
