<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_alignParentTop="true" android:layout_alignLeft="@+id/scrollView1" android:text="@string/availableLevels"></TextView>
    <ScrollView android:layout_width="wrap_content" android:id="@+id/scrollView1" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignLeft="@+id/button1" android:layout_marginTop="24dp" android:layout_alignRight="@+id/button2" android:layout_above="@+id/button1">
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ListView android:id="@+id/listView1" android:layout_width="fill_parent" android:layout_height="177dp"></ListView>
        </LinearLayout>
    </ScrollView>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button1" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:layout_marginLeft="15dp" android:layout_marginBottom="10dp" android:text="@string/play"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button2" android:layout_alignBottom="@+id/button1" android:layout_alignParentRight="true" android:layout_marginRight="24dp" android:text="@string/download"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button3" android:layout_below="@+id/scrollView1" android:layout_toLeftOf="@+id/button2" android:layout_marginRight="15dp" android:text="@string/create" android:onClick="createLevel"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button4" android:layout_alignBaseline="@+id/button3" android:layout_alignBottom="@+id/button3" android:layout_toLeftOf="@+id/button3" android:layout_marginRight="16dp" android:text="@string/delete"></Button>
    
</RelativeLayout>
