<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toLeftOf="@+id/button2" android:layout_marginRight="40dp" android:text="@string/world1" android:enabled="false" android:onClick="launchWorld1"></Button>
    <Button android:id="@+id/button2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_centerHorizontal="true" android:text="@string/world2" android:enabled="false" android:onClick="launchWorld2"></Button>
    <Button android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_toRightOf="@+id/button2" android:layout_marginLeft="40dp" android:text="@string/world3" android:enabled="false" android:onClick="launchWorld3"></Button>
    
</RelativeLayout>
